add uk and russia

--- a/db/families.yaml
+++ b/db/families.yaml
@@ -1025,6 +1025,9 @@ families:
     - person: ariane-de-rothschild
       generation: 7
       role: spouse
+    - person: lynn-forester-de-rothschild
+      role: by-marriage
+    - person: david-mayer-de-rothschild
   rupert:
     origin: South Africa
     founder: anton-rupert
